--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "antd": "^5.12.4",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "cookie": "^0.6.0",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
     "eslint": "^8",
