--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "cookie": "^0.6.0",
+    "dotenv": "^16.3.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
